--- a/src/base_server/config/nginx/default.conf
+++ b/src/base_server/config/nginx/default.conf
@@ -31,7 +31,7 @@ server {
         
     }
     
-    location /demo8001/ {
+    location /8001/ {
         proxy_pass http://192.168.1.11:8001/;
         proxy_redirect off;
         proxy_http_version 1.1;
@@ -43,7 +43,7 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
     }
-    location /demo8002/ {
+    location /8002/ {
         proxy_pass http://192.168.1.11:8002/;
         proxy_redirect off;
         proxy_http_version 1.1;
@@ -55,7 +55,7 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
     }
-    location /demo8003/ {
+    location /8003/ {
         proxy_pass http://192.168.1.11:8003/;
         proxy_redirect off;
         proxy_http_version 1.1;
@@ -67,7 +67,30 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
     }
-
+    location /8004/ {
+        proxy_pass http://192.168.1.11:8004/;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
+    }
+    location /8005/ {
+        proxy_pass http://192.168.1.11:8005/;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
+    }
 
     location /chatbot/ {
         proxy_pass http://192.168.1.11:7860/;
