--- a/src/base_server/config/nginx/default.conf
+++ b/src/base_server/config/nginx/default.conf
@@ -2,10 +2,8 @@ server {
     listen 80 default_server;
     server_name datadoctor.re.kr www.datadoctor.re.kr datadrift.kr datadrift.re.kr;
     root /var/www/html/public;
-
     client_max_body_size 100M;
-    
-    index index.php index.html;
+    index index.html index.php index.htm;
 
     error_log /var/log/nginx/api_error.log;
     access_log /var/log/nginx/api_access.log;
@@ -164,7 +162,7 @@ server {
         proxy_set_header   X-Forwarded-Port 443;
         proxy_set_header   X-Forwarded-Proto $scheme;
     }
-    
+
     location /semaphore/ {
       proxy_pass http://192.168.1.11:8009/;
       proxy_set_header Host $http_host;
@@ -204,7 +202,23 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }    
 
+    location /app_gradio8011/ {
+        proxy_pass http://192.168.1.11:8011/;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }   
 
-
-
+    location /app_fastapi8012/ {
+        proxy_pass http://192.168.1.11:8012/;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }   
 }
