--- a/src/standalone_container_servers/vector_db_server/docker-compose.yml
+++ b/src/standalone_container_servers/vector_db_server/docker-compose.yml
@@ -1,37 +1,13 @@
+version: '3.8'
 services:
-    grafana:
-        image: grafana/grafana-oss:latest
-        container_name: grafana
-        user: "${UID}:${GID}" # 현재 사용자의 UID와 GID로 설정
-        #restart: unless-stopped
-        restart: always
-        ports:
-            - '3000:3000' # 접근 포트 설정 (컨테이너 외부:컨테이너 내부)
-        volumes:
-            - ./config/grafana/grafana.ini:/etc/grafana/grafana.ini
-            - ./config/grafana/provisioning/:/etc/grafana/provisioning/
-            #- ./config/grafana/defaults.ini:/usr/share/grafana/conf/defaults.ini
-            - ~/.evc/grafana:/var/lib/grafana
-        environment:            
-            - GF_SERVER_ROOT_URL=http://evc.re.kr:23000
-            - GF_PATHS_CONFIG=/etc/grafana/grafana.ini
-            - GF_SECURITY_ADMIN_USER=admin
-            - GF_SECURITY_ADMIN_PASSWORD=admin
-            - GF_AUTH_ANONYMOUS_ENABLED=true
-            - GF_SECURITY_ALLOW_EMBEDDING=true
-            - GF_SECURITY_LOGIN_REMEMBER_DAYS=365
-            - GF_DEFAULT_APP_MODE=development
-            - GF_ENABLE_GZIP=true
-            - GF_SERVER_SERVE_FROM_SUB_PATH=true
-            - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-worldmap-panel,marcusolsson-csv-datasource,frser-sqlite-datasource,grafana-simple-json-datasource,innius-video-panel,jdbranham-diagram-panel,volkovlabs-image-panel,redis-app,redis-datasource,redis-explorer-app
-            #- GF_RENDERING_SERVER_URL=http://renderer:8081/render
-            #- GF_RENDERING_CALLBACK_URL=http://grafana:3000/
-            #- GF_LOG_FILTERS=rendering:debug
-        expose:
-            - 3000
-        networks:
-            - dev_network
+  vectordb:
+    image: vectordb/vectordb:latest
+    ports:
+      - "5000:5000"
+    environment:
+      VECTOR_DB_PASSWORD: "pw"
+    volumes:
+      - vectordb_data:/var/lib/vectordb
 
-networks:
-    dev_network:
-        driver: bridge
+volumes:
+  vectordb_data:
