--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ src/base_server/web/node_modules
 src/base_server/web/public/plotly/number-aug.csv
 src/base_server/web/public/plotly/*.csv
 src/base_server/web/public/videos
+src/base_server/*
 
 src/standalone_container_servers/vector_db_server/volumes
 src/standalone_container_servers/vector_db_server/milvus_docs
