--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
-    networks:
-      - analyzer-net
+    working_dir: /app
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
   frontend:
     build: ./frontend
@@ -18,8 +18,5 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-    networks:
-      - analyzer-net
-
-networks:
-  analyzer-net:
+    working_dir: /app
+    command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
