--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0"
   },
@@ -17,6 +20,6 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.13",
-    "vite": "^4.5.0"
+    "vite": "^7.2.4"
   }
 }
