feat: v1.0 - ddoc-plugin-vision 연동 및 WebSocket 기반 비동기 분석

--- a/server/backend/Dockerfile
+++ b/server/backend/Dockerfile
@@ -1,16 +1,49 @@
-FROM python:3.11-slim
+# syntax=docker/dockerfile:1
+
+# ============================================
+# Stage 1: ddoc-plugin-vision wheel 빌드
+# ============================================
+FROM python:3.11-slim AS builder
+
+WORKDIR /build
+
+# 빌드 도구 설치
+RUN pip install --no-cache-dir build wheel
+
+# ddoc-plugin-vision 소스 복사 (ddoc submodule에서)
+COPY ./ddoc/plugins/ddoc-plugin-vision /build/ddoc-plugin-vision
+
+# wheel 생성
+RUN cd /build/ddoc-plugin-vision && \
+    python -m build --wheel --outdir /build/wheels
+
+
+# ============================================
+# Stage 2: 런타임 이미지
+# ============================================
+FROM python:3.11-slim AS runtime
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# git 설치 (clip 패키지 설치에 필요)
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git && \
+    rm -rf /var/lib/apt/lists/*
 
-# dvc는 로컬 동작 위주 (git 없어도 괜찮게)
-RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+# ddoc-plugin-vision wheel 복사
+COPY --from=builder /build/wheels/*.whl /tmp/wheels/
 
-COPY . .
+# Python 의존성 설치
+COPY ./backend/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir /tmp/wheels/*.whl && \
+    rm -rf /tmp/wheels
 
-RUN chmod +x init_dvc.sh && ./init_dvc.sh
+# 앱 코드 복사
+COPY ./backend/app ./app
+
+# 데이터 저장 디렉토리 생성
+RUN mkdir -p /app/dvc_storage
 
 EXPOSE 8000
 
