--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
