feat: ddoc-workspace 서비스 연동 및 FiftyOne 통합
- ddoc-workspace: MLflow 기반 워크스페이스 관리 서비스 추가
- FiftyOne: 단일 세션으로 멀티 워크스페이스 데이터셋 탐색 지원
- UI: WorkspaceStudio 컴포넌트 추가 및 DataExplorer 통합
- nginx: reverse proxy 설정으로 /workspace, /fiftyone 경로 라우팅
- docker-compose: workspace 컨테이너 및 FiftyOne 환경 구성
- WebSocket: 비동기 작업 상태 추적 및 실시간 업데이트

주요 변경사항:
* ddoc-workspace 컨테이너 추가 (포트 8100)
* FiftyOne 세션을 workspace 컨테이너에서 실행 (포트 8159)
* 워크스페이스 전환 시 session.dataset 동적 교체
* nginx를 통한 통합 라우팅 (/workspace/*, /fiftyone/*)
* 프론트엔드에 WorkspaceStudio 및 DataExplorer UI 추가

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -28,6 +28,13 @@ Thumbs.db
 dvc_storage/
 *.dvc
 
+# Workspace data (Docker volume mounted)
+workspaces/
+mlruns/
+
+# Cursor IDE assets
+assets/
+
 # Database
 *.db
 *.sqlite
