--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.2",
     "recharts": "^2.10.0"
   },
   "devDependencies": {
