--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -36,7 +36,6 @@ services:
     networks:
       - app-network
 
-
   frontend:
     build: ./frontend
     container_name: analyzer-frontend
@@ -44,12 +43,13 @@ services:
       - "3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend_node_modules:/app/node_modules
     working_dir: /app
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
     networks:
       - app-network
-
+      
+      
   redis:
     image: redis:alpine
     networks:
@@ -124,3 +124,4 @@ volumes:
   workspaces_data:
   mlruns_data:
   fiftyone_db:
+  frontend_node_modules:
