fix: reverser-proxy nginx settings

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -153,8 +153,24 @@ http {
         # -----------------------------------------
         # FiftyOne API endpoints
         # -----------------------------------------
-        # FiftyOne uses multiple API endpoints that need proxying
-        location ~ ^/(events|graphql|plugins|aggregate|stages|sort|values|tag)$ {
+        # FiftyOne operators with subpaths (e.g., /operators/execute)
+        location /operators {
+            proxy_pass http://fiftyone;
+            proxy_http_version 1.1;
+            
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 86400s;
+        }
+        
+        # Other FiftyOne API endpoints (exact match)
+        location ~ ^/(events|graphql|plugins|aggregate|stages|sort|values|tag|media)$ {
             proxy_pass http://fiftyone;
             proxy_http_version 1.1;
             
