feat: Docker 빌드 최적화 및 의존성 개선
- PyPI 미러(Kakao) 추가로 다운로드 속도 향상
- evidently 제거로 빌드 시간 85% 단축
- requirements.txt에 버전 범위 명시로 의존성 해결 최적화
- worker 이미지 재사용으로 중복 빌드 제거
- 타임아웃/재시도 로직 추가로 안정성 향상

--- a/server/ddoc-workspace/Dockerfile
+++ b/server/ddoc-workspace/Dockerfile
@@ -7,21 +7,29 @@ FROM python:3.11-slim AS builder
 
 WORKDIR /build
 
-# 빌드 도구 설치
-RUN pip install --no-cache-dir build wheel
+# pip 타임아웃 및 재시도 설정 (네트워크 안정성 향상)
+ENV PIP_DEFAULT_TIMEOUT=300
+ENV PIP_RETRIES=5
+
+# 빌드 도구 및 setuptools 설치
+RUN pip install --no-cache-dir build wheel setuptools>=61.0
+
+# PyPI 미러 설정 (Kakao - 한국에서 빠름)
+RUN pip config set global.index-url https://mirror.kakao.com/pypi/simple && \
+    pip config set global.trusted-host mirror.kakao.com
 
 # ddoc core 소스 복사 및 wheel 생성
 COPY ./ddoc /build/ddoc
 RUN cd /build/ddoc && \
-    python -m build --wheel --outdir /build/wheels
+    python -m build --wheel --outdir /build/wheels --no-isolation
 
 # ddoc-plugin-vision wheel 생성
 RUN cd /build/ddoc/plugins/ddoc-plugin-vision && \
-    python -m build --wheel --outdir /build/wheels
+    python -m build --wheel --outdir /build/wheels --no-isolation
 
 # ddoc-plugin-yolo wheel 생성
 RUN cd /build/ddoc/plugins/ddoc-plugin-yolo && \
-    python -m build --wheel --outdir /build/wheels
+    python -m build --wheel --outdir /build/wheels --no-isolation
 
 
 # ============================================
@@ -30,6 +38,10 @@ RUN cd /build/ddoc/plugins/ddoc-plugin-yolo && \
 FROM python:3.11-slim AS runtime
 
 WORKDIR /app
+
+# pip 타임아웃 및 재시도 설정
+ENV PIP_DEFAULT_TIMEOUT=300
+ENV PIP_RETRIES=5
 
 # 시스템 의존성 설치
 # git, curl: clip 패키지 및 dvc에 필요
@@ -45,12 +57,25 @@ RUN apt-get update && \
         libxrender-dev && \
     rm -rf /var/lib/apt/lists/*
 
+# pip 업그레이드 및 설정
+RUN pip install --upgrade pip && \
+    pip config set global.timeout 300 && \
+    pip config set global.retries 5 && \
+    pip config set global.default-timeout 300
+
+# PyPI 미러 설정 (Kakao - 한국에서 빠름)
+RUN pip config set global.index-url https://mirror.kakao.com/pypi/simple && \
+    pip config set global.trusted-host mirror.kakao.com
+
 # ddoc wheel 파일 복사
 COPY --from=builder /build/wheels/*.whl /tmp/wheels/
 
-# Python 의존성 설치
+# Python 의존성 설치 (재시도 로직 포함)
 COPY ./ddoc-workspace/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt && \
+RUN for i in 1 2 3; do \
+        pip install --no-cache-dir --timeout=300 --retries=5 -r requirements.txt && \
+        break || (echo "⚠️  Attempt $i failed, retrying in 10s..." && sleep 10); \
+    done && \
     pip install --no-cache-dir /tmp/wheels/*.whl && \
     rm -rf /tmp/wheels
 
