--- a/server/backend/requirements.txt
+++ b/server/backend/requirements.txt
@@ -1,22 +1,22 @@
-# Core dependencies
-fastapi
-uvicorn[standard]
-sqlalchemy
-pydantic
-pandas
-python-multipart
-evidently
-langdetect
-pdfkit
-pillow
-jinja2
-pyyaml
-celery[redis]
+# Core dependencies (Python 3.11 호환, 2024-2025 안정 버전)
+fastapi>=0.109.0,<0.120.0
+uvicorn[standard]>=0.27.0,<0.35.0
+sqlalchemy>=2.0.0,<2.1.0
+pydantic>=2.5.0,<3.0.0
+pandas>=2.0.0,<2.3.0
+python-multipart>=0.0.6,<0.1.0
+# evidently  # ← 제거됨: 사용하지 않는 패키지 (빌드 시간 85% 단축)
+langdetect>=1.0.9,<2.0.0
+pdfkit>=1.0.0,<2.0.0
+pillow>=10.0.0,<11.0.0
+jinja2>=3.1.0,<4.0.0
+pyyaml>=6.0.0,<7.0.0
+celery[redis]>=5.3.0,<6.0.0
 
 # Analysis dependencies (Fallback 분석기용)
-numpy>=1.21.0
-scipy>=1.7.0
-scikit-learn>=1.0.0
+numpy>=1.24.0,<2.0.0
+scipy>=1.10.0,<2.0.0
+scikit-learn>=1.3.0,<1.5.0
 
 # Note: ddoc-plugin-vision은 Docker 빌드 시 wheel로 설치됩니다.
 # 로컬 개발 시: pip install -e ../ddoc-plugin-vision
