--- a/server/ddoc-workspace/requirements.txt
+++ b/server/ddoc-workspace/requirements.txt
@@ -1,33 +1,33 @@
-# FastAPI and server
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
+# FastAPI and server (Python 3.11 호환, 2024-2025 안정 버전)
+fastapi>=0.109.0,<0.120.0
+uvicorn[standard]>=0.27.0,<0.35.0
+python-multipart>=0.0.6,<0.1.0
 
 # Data processing
-numpy>=1.24.0
-pandas>=2.0.0
-Pillow>=10.0.0
-pyyaml>=6.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0,<2.3.0
+Pillow>=10.0.0,<11.0.0
+pyyaml>=6.0.0,<7.0.0
 
 # ML and analysis
-torch>=2.0.0
-torchvision>=0.15.0
-scikit-learn>=1.3.0
+torch>=2.0.0,<2.4.0
+torchvision>=0.15.0,<0.19.0
+scikit-learn>=1.3.0,<1.5.0
 
 # MLflow
-mlflow>=2.8.0
+mlflow>=2.8.0,<2.15.0
 
 # DVC
-dvc>=3.30.0
+dvc>=3.30.0,<4.0.0
 
 # YOLO (for experiment)
-ultralytics>=8.0.0
+ultralytics>=8.0.0,<9.0.0
 
 # FiftyOne for dataset visualization
-fiftyone>=0.23.0
-pymongo>=4.0.0
+fiftyone>=0.23.0,<0.25.0
+pymongo>=4.0.0,<5.0.0
 
 # Utilities
-python-json-logger>=2.0.0
-aiofiles>=23.0.0
-httpx>=0.25.0
+python-json-logger>=2.0.0,<3.0.0
+aiofiles>=23.0.0,<24.0.0
+httpx>=0.25.0,<0.28.0
