--- a/server/ddoc-workspace/requirements.txt
+++ b/server/ddoc-workspace/requirements.txt
@@ -26,6 +26,7 @@ ultralytics>=8.0.0,<9.0.0
 # FiftyOne for dataset visualization
 fiftyone>=0.23.0,<0.25.0
 pymongo>=4.0.0,<5.0.0
+mongoengine>=0.29.0,<0.30.0
 
 # Utilities
 python-json-logger>=2.0.0,<3.0.0
